Prevent header link to enable tool access when cropped
Cropped pages are generally the home page only and don’t call for a top
level university link as much in any case.

--- a/styles/sass/spine/_cropped.scss
+++ b/styles/sass/spine/_cropped.scss
@@ -34,7 +34,7 @@
 		&.shelved button#shelve,
 		&.unshelved button#shelve {
 		  display:none;
-		}
+			}
 
 		/* #### Cropped and Scrolled */
 		&.skimmed:not(.unshelved) {
@@ -57,6 +57,8 @@
 				background-position: center 12px;
 				background-size: auto 30px;
 				height: 49px;
+				pointer-events: none;
+				cursor: default;
 				}
 
 			#wsu-actions {
